--- a/style/other/svg_style.scss
+++ b/style/other/svg_style.scss
@@ -44,3 +44,17 @@ svg.social__icon{
     width: torem(12px);
     height: torem(11px);
     }
+
+    .icon__burger{
+        display: inline-block;
+         width: torem(46px);
+         height: torem(44px);
+    }
+
+    .icon__kkal{
+        display: inline-block;
+         width: torem(60px);
+         height: torem(60px);
+    }
+
+    
