--- a/style/parts/overlay_menu.scss
+++ b/style/parts/overlay_menu.scss
@@ -1,37 +1,166 @@
 .overlay__menu-links {
-	vertical-align: middle;
-	position: relative;
-	height: torem(22px);
-	align-items: center;
-	margin-left: torem(30px);
+    vertical-align: middle;
+    position: relative;
+    height: torem(22px);
+    align-items: center;
+    margin-left: torem(30px);
     display: none;
-    
-    @include tablets{
-        display:flex;
+
+    @include tablets {
+        display: flex;
     }
 
-	
+
 }
 
 .overlay__bars {
-	&, &:before, &:after {
-		background: #fff;
-		width: torem(24px);
-		height: torem(5px);
-		border-radius: torem(3px);
-	}
 
-	&:before, &:after {
-		content: "";
-		display: block;
-		position: absolute;
-	}
+    &,
+    &:before,
+    &:after {
+        background: #fff;
+        width: torem(24px);
+        height: torem(5px);
+        border-radius: torem(3px);
+    }
 
-	&:before {
-		top: 0;
-	}
+    &:before,
+    &:after {
+        content: "";
+        display: block;
+        position: absolute;
+    }
 
-	&:after {
-		bottom: 0;
-	}
+    &:before {
+        top: 0;
+    }
+
+    &:after {
+        bottom: 0;
+    }
 }
+
+.overlay {
+
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    background-color: #2f3234;
+   
+    overflow-x: hidden;
+    opacity: 0.95;
+    display: none;
+	flex-direction: column;
+	justify-content: center;
+    transition: 1.5s;
+}
+
+.overlay__menu {
+    display: none;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+	justify-content: center;
+	height:0%;
+	@include tablets {
+        display: flex;
+        height: 100%;
+    }
+}
+
+.overlay__menu,.overlay__ref{display:none;
+	@include tablets {
+        display: flex;
+     
+	}}
+
+	.overlay__menu{   @include tablets { display: flex;
+		flex-direction: column;
+		text-align: center;
+		align-items: center;
+		justify-content: inherit;
+		height: 80%;}}
+	
+	.overlay__item{
+		margin-right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Ubuntu';
+    font-weight: 400;
+    font-size: torem(24px);
+    text-transform: uppercase;
+		
+		&:after {
+		  content: "";
+		  display: block;
+		  width: torem(8px);
+		  height: torem(8px);
+		  background: #fff;
+		  border-radius: 50%;
+		  margin: torem(25px);
+		}
+	  
+		&:last-child {
+		  margin-right: 0;
+	  
+		  &:after {
+			display: none;
+		  }
+		}
+	  }
+
+	  
+
+	.close {
+		position: absolute;
+		right: torem(20px);
+		top: torem(35px);
+		width: torem(36px);
+		height: torem(36px);
+		
+	  }
+	  .close:hover {
+		opacity: 1;
+	  }
+	  .close:before, .close:after {
+		position: absolute;
+		left: 15px;
+		content: ' ';
+		background: #fff;
+        width: torem(24px);
+        height: torem(5px);
+        border-radius: torem(3px);
+		
+	  }
+	  .close:before {
+		transform: rotate(45deg);
+	  }
+	  .close:after {
+		transform: rotate(-45deg);
+	  }
+
+	  .overlay__logo{@include tablets {
+		width: 92px;
+		height: 69px;
+        z-index: 5;
+		top:20px;
+		left:35px;
+		margin-left: torem(25px);
+		margin-top: torem(-12px);
+	}
+	}
+
+	.overlay__active {
+        display: flex;
+		width: 100%;
+		
+	}
+
+	
+	.vsbl_not{visibility: hidden;}
+
+	
