--- a/style/parts/overlay_menu.scss
+++ b/style/parts/overlay_menu.scss
@@ -55,7 +55,7 @@
     display: none;
 	flex-direction: column;
 	justify-content: center;
-    transition: 1.5s;
+	transition: 1.5s;
 }
 
 .overlay__menu {
@@ -102,6 +102,8 @@
 		  background: #fff;
 		  border-radius: 50%;
 		  margin: torem(25px);
+			@include phones{margin: 5%;
+			}
 		}
 	  
 		&:last-child {
@@ -144,8 +146,8 @@
 	  }
 
 	  .overlay__logo{@include tablets {
-		width: 92px;
-		height: 69px;
+		max-width: torem(60px);
+		max-height: torem(60px);
         z-index: 5;
 		top:20px;
 		left:35px;
